--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "a",
-  "version": "1.0.0",
+  "name": "xin-cli",
+  "version": "0.0.1",
+  "description":"xin-cli 脚手架",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c rollup.config.js --bundleConfigAsCjs"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["vite","vue3","TypeScript","Element-plus"],
+  "author": "xin",
   "license": "ISC",
-  "description": "",
+  "bin":{"xin":"./bin/index.js"},
+  "files":["dist","bin","README.md"],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-json": "^6.1.0",
